Se agregó una imagen y se termino de implementar la frecuencia fundamental con la FFT

--- a/Entrada/Entrada.csproj
+++ b/Entrada/Entrada.csproj
@@ -97,5 +97,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="carro-cruz-azul.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Avion.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
